--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.10",
+    "@mailchimp/mailchimp_marketing": "^3.0.78",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.6",
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
@@ -25,9 +27,9 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "prettier": "prettier --write --ignore-unknown ."
   },
@@ -63,6 +65,8 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
+    "querystring-es3": "^0.2.1",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.1.8"
   }
 }
